force-app/main/default/objects/Compliance_Item__c/Compliance_Item__c.object-meta.xml
<CustomObject>
    <label>Compliance Item</label>
    <nameField>
        <displayFormat>CompItem-{0000000}</displayFormat>
        <label>Compliance Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Compliance Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>