force-app/main/default/objects/Compliance_Item__c/fields/Action_Plan_Text__c.field-meta.xml
<CustomField>
    <fullName>Action_Plan_Text__c</fullName>
    <label>Action Plan (Text)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>