force-app/main/default/objects/Compliance_Item__c/fields/Compliance_Header__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Header__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Compliance Header</label>
    <referenceTo>Factory_Compliance_Report__c</referenceTo>
    <relationshipLabel>Compliance Items</relationshipLabel>
    <relationshipName>Compliance_Items</relationshipName>
    <type>Lookup</type>
</CustomField>