force-app/main/default/objects/Compliance_Item__c/fields/Month_From__c.field-meta.xml
<CustomField>
    <fullName>Month_From__c</fullName>
    <label>Month From</label>
    <type>Date</type>
</CustomField>