force-app/main/default/objects/Compliance_Item__c/fields/Month_To__c.field-meta.xml
<CustomField>
    <fullName>Month_To__c</fullName>
    <label>Month To</label>
    <type>Date</type>
</CustomField>