force-app/main/default/objects/Compliance_Item__c/fields/RCA_Text__c.field-meta.xml
<CustomField>
    <fullName>RCA_Text__c</fullName>
    <label>RCA(Text)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>